--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,7 @@ steps:
       - apt update
       - apt install -y
           curl
+          haxe
           jq
           libarchive-dev
           libcurl4-openssl-dev
